# kodi-matrix-lively

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
core/: Cargo.toml
core/src/: lib.rs  renderer.rs
public/: LivelyInfo.json  LivelyInfo.loc.json  LivelyProperties.json  LivelyProperties.loc.json
public/shaders/: clean.frag.glsl  cleanwf.frag.glsl  cleanwfenv.frag.glsl  logo.frag.glsl
scripts/: make-preview.ps1
src/: main.ts
