[package]
name = "matrix-wasm-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
glow = "0.13.1"
log = "0.4.21"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Document",
  "Window",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "console"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
